# my-agents

./: .env  .gitignore  AI_Agent技术全栈全景图_分享PPT.pptx  AI_Agent技术栈全景图_完整版.xlsx  AI_Agent技术栈学习计划.md  LEARNING_ROADMAP.md  LICENSE  README.md  ResponsesAPI.py  dev.example.json  langSmith能力报告.md  langsmith.md  package-lock.json  package.json  requirements.txt  rules.md  tsconfig.json
Langfuse/: langfuse_trace_demo.py  (+1 more)
agent_platform/: API_KEY_DEPENDENCY_ANALYSIS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
agent_platform/.hermes/plans/: langfuse-wiring.md
agent_platform/data/: clickhouse-keeper.xml
agent_platform/data/documents/: ai_agent_basics.md  langgraph_intro.md  rag_guide.md
agent_platform/integrations/langfuse/: README.md  theory.md
agent_platform/integrations/langsmith/: comparison.md
agent_platform/src/: __init__.py  cli.py  config.py  workflow_trace.py
agent_platform/src/agent/: __init__.py  graph.py  memory.py  tools.py
agent_platform/src/api/: __init__.py  app.py  middleware.py  routes.py
agent_platform/src/embeddings/: __init__.py  local_bge.py
agent_platform/src/llm/: __init__.py  client.py  structured.py
agent_platform/src/observability/: __init__.py  tracing.py
agent_platform/src/parsing/: __init__.py  document.py
agent_platform/src/rag/: __init__.py  generator.py  reranker.py  retriever.py
agent_platform/src/security/: __init__.py  guard.py  sanitizer.py
agent_platform/src/vectordb/: __init__.py  chroma_store.py
agent_platform/tests/: test_all.py
agent_platform/theory/: README.md
agent_platform/web/: index.html
(+264 files in other folders)
