[project]
name = "agent-platform"
version = "1.0.0"
description = "企业级 AI Agent 平台 - RAG + LangGraph + Tool Calling 集成演示"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "langgraph>=0.2.0",
    "langfuse>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
